Fix | footer text, img overlap

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -16,13 +16,13 @@
         height: 768px !important;
     }
     @include tablet {
-        height: 1560px !important;
+        height: 1662px !important;
     }
     @include tablet-sm {
-        height: 1490px !important;
+        height: 1555px !important;
     }
     @include mobile {
-        height: 1406px !important;
+        height: 1475px !important;
     }
 }
 
